2016-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/url.c: Don't hide HTTP, FTP, and FILE URL support from
	'-list format' output.  Ignore HTTP, FTP, and FILE as a useful
	file extension for determing the file format.

2016-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPathToPolygon): Make sure that first
	edge is initialized.  Make sure that points is not null.

2016-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fixed segmentation violation while
	reading file "275077586554139424.lqxdgqxtfs.svg" provided via
	private email from Gustavo Grieco on May 15, 2016.  This is due to
	another CVE-2016-2317 related issue.

2016-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c ("C"): Fixed problems while reading files
	"aaphrbkwwe.svg.-1899680443073025602",
	"aaphrbkwwe.svg.-5751004588641220738",
	"aaphrbkwwe.svg.-8875730334406147537", and
	"aaphrbkwwe.svg.4495884156523242589" provided via private email
	from Gustavo Grieco on February 8, 2016.

2016-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Verify that DIB file data is
	sufficient to meet claims made by file header.  Validate image
	planes.  Fixes Fixes problem reported by Hanno Böck on May 8th,
	2016 via private email entitled "malloc issue in ReadDIBImage".

2016-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c (RegisterMSLImage): Ignore the file extension on
	MSL files.  The only way to read an image from a MSL file (as
	opposed to explicitly running a MSL script with 'conjure') is by
	reading using a filename specification like "msl:filename".  This
	is done for security reasons.

	* magick/render.c (DrawPrimitive): Fix Coverity issue 126378
	"Resource leak".

	* coders/mat.c (DecompressBlock): Fix Coverity issue 126379
	"Resource leak".

	* magick/render.c (DrawImage): Fix Coverity issue 126380 "Resource
	leak".
